# qcp-cli

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  main.py  pyproject.toml  skills-lock.json  trigger.sh
.github/workflows/: ci.yml  release.yml
Formula/: qcp.rb
qcp/: __init__.py  agent.py  cli.py  config.py  db.py  errors.py  llm.py  memory.py  models.py  output.py  spinner.py  telemetry.py  tools.py
scripts/: build.sh  clean.sh  install.ps1  install.sh
tests/: test_agent.py  test_cli.py  test_core.py  test_memory.py  test_output.py  test_tools.py  test_version.py
