[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qcp-cli"
version = "0.1.11"
description = "Query Companion: a CLI to query Postgres databases in natural language."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Query Companion contributors" }
]
keywords = ["cli", "postgres", "sql", "natural-language", "gemini", "ai", "database"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
]
dependencies = [
    "click>=8.1",
    "langchain>=1.0,<2",
    "langchain-google-genai>=4.0,<5",
    "psycopg[binary]>=3.1",
    "pydantic>=2.10,<3",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0",
    "pytest>=9.0",
    "pytest-mock>=3.10",
    "ruff>=0.11",
]

[project.scripts]
qcp = "qcp.cli:run"

[project.urls]
Homepage = "https://github.com/Moduna-AI/qcp-cli"
Issues = "https://github.com/Moduna-AI/qcp-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["qcp"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM", "D", "ANN"]
ignore = ["E501", "ANN401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "ANN"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
